[gd_scene load_steps=2 format=3 uid="uid://d0ct1uciod7et"]

[ext_resource type="Script" path="res://scenes/camera/camera.gd" id="1_rec16"]

[node name="Camera" type="Node"]
script = ExtResource("1_rec16")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 1)

[node name="ForwardMarker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 1)

[node name="PlaySpaceMarker3D" type="Marker3D" parent="."]

[node name="BookMarker3D" type="Marker3D" parent="."]
